--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     <div class="about_me">
        <h1>Обо мне</h1>
-       <img src="file:///C:/Users/Дом/Downloads/Черта%20заголовка.png" alt="#"><br>
+       <img src="img/%D0%A7%D0%B5%D1%80%D1%82%D0%B0%20%D0%B7%D0%B0%D0%B3%D0%BE%D0%BB%D0%BE%D0%B2%D0%BA%D0%B0.png" alt="#"><br>
        <img crs="" alt="здесь должна быть фотография">
        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum vero doloribus maiores! Corporis eos, porro dolorum quaerat consequuntur culpa reiciendis est et fuga unde vero, soluta enim! Nemo eveniet, facilis!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum vero doloribus maiores! Corporis eos, porro dolorum quaerat consequuntur culpa reiciendis est et fuga unde vero, soluta enim! Nemo eveniet, facilis!</p>
        <a href="#"><input type="submit" value="скачать резюме"> </a>
@@ -41,25 +41,25 @@
     </div>
     <div class="What_i_can_do">
        <h1>Что я умею</h1>
-       <img src="file:///C:/Users/Дом/Downloads/Черта%20заголовка.png" alt="#"><br>
-       <img src="file:///C:/Users/Дом/Downloads/ноут.png" alt="#">
+       <img src="img/%D0%A7%D0%B5%D1%80%D1%82%D0%B0%20%D0%B7%D0%B0%D0%B3%D0%BE%D0%BB%D0%BE%D0%B2%D0%BA%D0%B0.png" alt="#"><br>
+       <img src="img/%D0%BD%D0%BE%D1%83%D1%82.png" alt="#">
        <h4>Веб-дизайн</h4>
        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur officia vel, eum odio, voluptas dolorum delectus reprehenderit! Eum, fuga, adipisci?</span><br>
-       <img src="file:///C:/Users/Дом/Downloads/знак.png" alt="#">
+       <img src="img/%D0%B7%D0%BD%D0%B0%D0%BA.png" alt="#">
        <h4>Разработка</h4>
        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur officia vel, eum odio, voluptas dolorum delectus reprehenderit! Eum, fuga, adipisci?</span><br>
-       <img src="file:///C:/Users/Дом/Downloads/ракета%20копия.png" alt="#">
+       <img src="img/%D1%80%D0%B0%D0%BA%D0%B5%D1%82%D0%B0%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F.png" alt="#">
        <h4>CEO-Оптимизация</h4>
        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur officia vel, eum odio, voluptas dolorum delectus reprehenderit! Eum, fuga, adipisci?</span><br>
-       <img src="file:///C:/Users/Дом/Downloads/граммофон.png" alt="#">
+       <img src="img/%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%BE%D1%84%D0%BE%D0%BD.png" alt="#">
        <h4>Маркетинг</h4>
        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur officia vel, eum odio, voluptas dolorum delectus reprehenderit! Eum, fuga, adipisci?</span><br>
     </div>
     <div class="cases">
        <h1>КЕЙСЫ</h1>
-       <img src="file:///C:/Users/Дом/Downloads/Черта%20заголовка.png" alt="#"><br>
+       <img src="img/%D0%A7%D0%B5%D1%80%D1%82%D0%B0%20%D0%B7%D0%B0%D0%B3%D0%BE%D0%BB%D0%BE%D0%B2%D0%BA%D0%B0.png" alt="#"><br>
        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores hic aut veniam facilis, ipsa accusamus.</span>
-       <img src="file:///C:/Users/Дом/Downloads/фотка.png" alt="#">
+       <img src="img/%D1%84%D0%BE%D1%82%D0%BA%D0%B0.png" alt="#">
        <h3>CLIENT:</h3>
        <h6>Какая-то компания</h6>
        <h3>WEBSITE:</h3>
@@ -93,39 +93,39 @@
     </div>
     <div class="statistics">
         <h2>немного статистики</h2>
-        <img src="file:///C:/Users/Дом/Downloads/Черта%20заголовка.png" alt="#"><br>
-        <img src="file:///C:/Users/Дом/Downloads/смайл.png" alt="">
+        <img src="img/%D0%A7%D0%B5%D1%80%D1%82%D0%B0%20%D0%B7%D0%B0%D0%B3%D0%BE%D0%BB%D0%BE%D0%B2%D0%BA%D0%B0.png" alt="#"><br>
+        <img src="img/%D1%81%D0%BC%D0%B0%D0%B9%D0%BB.png" alt="">
         <h3>120</h3>
         <h5>счастливых клиентов</h5>
-        <img src="file:///C:/Users/Дом/Downloads/скобки.png" alt="#">
+        <img src="img/%D1%81%D0%BA%D0%BE%D0%B1%D0%BA%D0%B8.png" alt="#">
         <h3>4,600</h3>
         <h5>часов работы</h5>
-        <img src="file:///C:/Users/Дом/Downloads/галочка.png" alt="">
+        <img src="img/%D0%B3%D0%B0%D0%BB%D0%BE%D1%87%D0%BA%D0%B0.png" alt="">
         <h3>340</h3>
         <h5>проектов завершено</h5>
-        <img src="file:///C:/Users/Дом/Downloads/кубок.png" alt="">
+        <img src="img/%D0%BA%D1%83%D0%B1%D0%BE%D0%BA.png" alt="">
         <h3>23</h3>
         <h5>наград получено</h5>
     </div>
     <div class="feedback">
         <h2>Отзывы</h2>
-        <img src="file:///C:/Users/Дом/Downloads/Черта%20заголовка.png" alt="#"><br>
-        <img src="file:///C:/Users/Дом/Downloads/фотка-.png" alt=""><br>
+        <img src="img/%D0%A7%D0%B5%D1%80%D1%82%D0%B0%20%D0%B7%D0%B0%D0%B3%D0%BE%D0%BB%D0%BE%D0%B2%D0%BA%D0%B0.png" alt="#"><br>
+        <img src="img/%D1%84%D0%BE%D1%82%D0%BA%D0%B0-.png" alt=""><br>
         <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias placeat hic distinctio blanditiis iure temporibus tenetur illo! Dolor, repellendus, non explicabo consequatur officia quas distinctio, aspernatur, nihil rem voluptates veniam.</span>
         <p>Михаил,Ген директор ПАО"Газпром"</p>
-        <img src="file:///C:/Users/Дом/Downloads/Оранж.png" alt="#">
-        <img src="file:///C:/Users/Дом/Downloads/Оранж%20копия.png" alt="#">
-        <img src="file:///C:/Users/Дом/Downloads/Оранж%20копия%202.png" alt="#">
+        <img src="img/%D0%9E%D1%80%D0%B0%D0%BD%D0%B6.png" alt="#">
+        <img src="img/%D0%9E%D1%80%D0%B0%D0%BD%D0%B6%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F.png" alt="#">
+        <img src="img/%D0%9E%D1%80%D0%B0%D0%BD%D0%B6%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F%202.png" alt="#">
     </div>
     <div class="">
         <h2>Мои контакты</h2>
-        <img src="file:///C:/Users/Дом/Downloads/Черта%20заголовка.png" alt="#"><br>
+        <img src="img/%D0%A7%D0%B5%D1%80%D1%82%D0%B0%20%D0%B7%D0%B0%D0%B3%D0%BE%D0%BB%D0%BE%D0%B2%D0%BA%D0%B0.png" alt="#"><br>
         <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h6>
-        <img src="file:///C:/Users/Дом/Downloads/гео.png" alt="#">
+        <img src="img/%D0%B3%D0%B5%D0%BE.png" alt="#">
         <h5>Санкт-Питербург Невский проспект 11</h5>
-        <img src="file:///C:/Users/Дом/Downloads/конверт.png" alt="#">
+        <img src="img/%D0%BA%D0%BE%D0%BD%D0%B2%D0%B5%D1%80%D1%82.png" alt="#">
         <h5>shinkarenkovita46@gmail.com</h5>
-        <img src="file:///C:/Users/Дом/Downloads/труба.png" alt="#">
+        <img src="img/%D1%82%D1%80%D1%83%D0%B1%D0%B0.png" alt="#">
         <h5>+79505319347</h5>
         
         <h4>оставьте мне сообщение</h4>
@@ -135,15 +135,15 @@
             <textarea name="name1" id="1" cols="60" rows="7" placeholder="сообщение"></textarea>
         </form>
         <input type="submit" value="отправить"><br>
-        <img src="file:///C:/Users/Дом/Downloads/фб.png" alt="#">
-        <img src="file:///C:/Users/Дом/Downloads/твитер.png" alt="#">
-        <img src="file:///C:/Users/Дом/Downloads/мяч.png" alt="#">
-        <img src="file:///C:/Users/Дом/Downloads/киса.png" alt="#">
-        <img src="file:///C:/Users/Дом/Downloads/инст.png" alt="#">
-        <img src="file:///C:/Users/Дом/Downloads/ин.png" alt="#">
+        <img src="img/%D1%84%D0%B1.png" alt="#">
+        <img src="img/%D1%82%D0%B2%D0%B8%D1%82%D0%B5%D1%80.png" alt="#">
+        <img src="img/%D0%BC%D1%8F%D1%87.png" alt="#">
+        <img src="img/%D0%BA%D0%B8%D1%81%D0%B0.png" alt="#">
+        <img src="img/%D0%B8%D0%BD%D1%81%D1%82.png" alt="#">
+        <img src="img/%D0%B8%D0%BD.png" alt="#">
     </div>
     <footer>
-        <img src="file:///C:/Users/Дом/Downloads/Карта.png" alt="">
+        <img src="img/%D0%9A%D0%B0%D1%80%D1%82%D0%B0.png" alt="">
     </footer>
 </body>
      
